[project]
name = "pythonacyncio"
version = "0.1.0"
description = ""
authors = [
    {name = "srt-2000",email = "srt2000888@gmail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.11,<4.0.0)",
    "faker (>=37.4.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
