[project]
name = "pythonacyncio"
version = "0.1.0"
description = ""
authors = [
    {name = "srt-2000",email = "srt2000888@gmail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.11,<4.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "multidict (==6.5.0)",
    "frozenlist (==1.7.0)",
    "propcache (==0.3.2)",
    "yarl (==1.20.1)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "fastapi[all] (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
